// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts > renders a 58mm GST receipt with split and payment details 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><01>ForkFlow Cafe
<1D><21><00><1B><45><00>12 Market Road
GSTIN: 29ABCDE1234F1Z5
FSSAI: 12345678901234

<1B><45><01>TAX INVOICE

<1B><45><00><1B><61><00>Date: 28 Sept 2026, 13:30
Bill #42                    PAID
DINE-IN: T1 / B
Payment mode: CASH + UPI
All amounts in Rs.
................................
<1B><45><01>Item              Qty     Amount
<1B><45><00>................................
Meal                2     210.00
  @ 105.00 each
................................
Subtotal (2 qty)          210.00
................................
<1B><45><01><1D><21><01>TOTAL Rs.                 210.00
<1D><21><00><1B><45><00>................................
Includes GST:
Taxable @ 5%              200.00
CGST 2.5%                   5.00
SGST 2.5%                   5.00
................................
CASH                      100.00
UPI                       110.00
<1B><45><01>PAID IN FULL
<1B><45><00>................................
<1B><61><01>Thank you!
<1B><64><03><1D><56><42><00>"
`;

exports[`receipts > renders a 80mm GST receipt with split and payment details 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><01>ForkFlow Cafe
<1D><21><00><1B><45><00>12 Market Road
GSTIN: 29ABCDE1234F1Z5
FSSAI: 12345678901234

<1B><45><01>TAX INVOICE

<1B><45><00><1B><61><00>Date: 28 Sept 2026, 13:30
Bill #42                                    PAID
DINE-IN: T1 / B
Payment mode: CASH + UPI
All amounts in Rs.
................................................
<1B><45><01>Item                     Qty     Rate     Amount
<1B><45><00>................................................
Meal                       2   105.00     210.00
................................................
Subtotal (2 qty)                          210.00
................................................
<1B><45><01><1D><21><01>TOTAL Rs.                                 210.00
<1D><21><00><1B><45><00>................................................
Includes GST:
Taxable @ 5%                              200.00
CGST 2.5%                                   5.00
SGST 2.5%                                   5.00
................................................
CASH                                      100.00
UPI                                       110.00
<1B><45><01>PAID IN FULL
<1B><45><00>................................................
<1B><61><01>Thank you!
<1B><64><03><1D><56><42><00>"
`;
